--- a/styles/app.css
+++ b/styles/app.css
@@ -14,3 +14,17 @@
 .hand {
   overflow: auto;
 }
+
+/* CARDS */
+
+.card img {
+  width: 100%;
+  height:100%;
+}
+
+.covered img{
+  /*background: url('../img/card-back.png');*/
+  content: url('../img/card-back.png');
+}
+
+
